test/seq/cmdlists/invalid_freq_val2.err
SyntaxError: Hex literal out of range [0x0, 0x7fffffff]
Line: 2
freq(0) = 0x80000000
          ~~~~~~~~~~
